--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
       <div class="centre3">
         <p> This short documentary produced by Stuff highlight some of the important work we do with Keas:. </p>
 
-        <p> https://interactives.stuff.co.nz/2021/this-is-how-it-ends-extinction-documentary/native-birds/     </p>
+        <iframe width="420" height="315"
+        src="https://interactives.stuff.co.nz/2021/this-is-how-it-ends-extinction-documentary/native-birds/">
+        </iframe>
 
 
       </div>
